0.4.0
	IPv6 support
	add -R option to limit shown sockets to given protocol


0.3.1
	all Debian patches applied


0.3
	original version